<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/playscreenbutton"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingTop="40dp"
    android:paddingEnd="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_song_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/default_song_header"
            android:textColor="@color/username" />

        <TextView
            android:id="@+id/text_song_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textColor="@color/username" />

        <TextView
            android:id="@+id/text_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_song_name"
            android:textAllCaps="true"
            android:textColor="@color/username" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_song_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/default_song_desc"
        android:textColor="@color/username" />
</LinearLayout>
